tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__assign_building__assign_to_local_const.snap
---
source: tests/semantic/statement_building/assign_building.rs
expression: error
---
[
    ErrorRecord {
        key: ErrorKey {
            kind: ImmutableAssignment,
            payload: Str(
                "local",
            ),
        },
        earliest_phase: StatementCollection,
        ranges: {
            Range {
                start: 0,
                end: 0,
            },
        },
        severity: Error,
    },
]
