tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__assign_building__assign_to_state.snap
---
source: tests/semantic/statement_building/assign_building.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: greet
    namespace_id: 0
    func_type: Global
    params: []
    return_type:
      Primitive: Void
    block:
      body:
        - Assign:
            target:
              var_id: 0
              offset: 0
              value_type:
                Primitive: Int
              is_field: false
            value:
              kind:
                IntLiteral: 0
              value_type:
                Primitive: Int
              range:
                start: 0
                end: 0
      scope_id: 1
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - greet
  : 0
next_function_id: 1
